common-applications/freesky-icsl-hk-cluster/opengauss-website/website/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websiteinfo
  namespace: opengauss-website
  labels:
    app: websiteinfo
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.websiteinfod: semver:~1.0
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: websiteinfo
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: websiteinfo
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: websiteinfod
        image: swr.ap-southeast-1.myhuaweicloud.com/infra-hk/icsl/opengauss-website:d7605bb7e335c17d1c266a10f916a5cdf0fa72d9
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 1000m
            memory: 1000Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          failureThreshold: 3
          successThreshold: 1
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 5
