common-applications/freesky-icsl-hk-cluster/opengauss-website/website/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: websiteservice
  namespace: opengauss-website
spec:
  ports:
  - name: http-port
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: websiteinfo
  type: ClusterIP
