common-applications/freesky-icsl-hk-cluster/opengauss-website/website/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-rpm: 200
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Content-Type-Options "nosniff";
      add_header X-XSS-Protection "1; mode=block";
      add_header X-Frame-Options "DENY";
      add_header Content-Security-Policy "script-src 'self' *.baidu.com ers.baidu.com 'unsafe-inline'; object-src 'none'; frame-ancestors https://vhall.huawei.com";
      add_header Cache-Control "no-cache";
      add_header Pragma "no-cache";
    nginx.ingress.kubernetes.io/server-snippet: |
      rewrite ^/zh/docs/(.*)                              https://docs.opengauss.org/zh/docs/$1 redirect;
      rewrite ^/zh/blogs/blogs.html                       /zh/blogs/ redirect;
      rewrite ^/zh/video.html$                            /zh/video/ redirect;
      rewrite ^/zh/security-advisories.html$              /zh/security-advisories/ redirect;
      rewrite ^/zh/cve.html$                              /zh/cve/ redirect;
      rewrite ^/zh/summit.html                            /zh/summit/summit2022/  permanent;
      rewrite ^/zh/summit2021.html                        /zh/summit/summit2021/  permanent;
      rewrite ^/zh/summit/$                               /zh/summit/summit2022/  permanent;
  name: opengauss-website-ingress
  namespace: opengauss-website
spec:
  tls:
    - hosts:
        - opengauss.myopeninfra.com
      secretName: website-tls
  rules:
    - host: opengauss.myopeninfra.com
      http:
        paths:
        - backend:
            serviceName: websiteservice
            servicePort: 80
          path: /
